update authors file

--- a/AUTHORS
+++ b/AUTHORS
@@ -4,3 +4,5 @@
 Jennifer Huang <133@holbertonschool.com>
 Alexa Orrico <210@holbertonschool.com>
 Joann Vuong <130@holbertonschool.com> 
+Tuyen Huynh <7539@holbertonschool.com>
+David Hache <@holbertonschool.com>
